--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,32 @@
 .DS_Store
+# OS
+.DS_Store
+
+# Python
+__pycache__/
+*.pyc
+.venv/
+.env
+
+# Data / Artifacts / Logs (keep these out)
+data/
+docs/From EU website/
+*.log
+*.zip
+*.xlsx
+*.xls
+*.png
+*.jpg
+*.jpeg
+
+# Project-specific
+products/**/clients/
+
+# Node/Build (if any)
+node_modules/
+dist/
+build/
+
+# IDE
+.vscode/
+.idea/
